--- a/style.css
+++ b/style.css
@@ -485,3 +485,14 @@ body {
   height: 200px;
   object-fit: contain;
 }
+.card p {
+  text-align: center;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.card .btn {
+  display: inline-block;
+  margin: 0 auto;
+  text-align: center;
+}
