--- a/style.css
+++ b/style.css
@@ -496,3 +496,8 @@ body {
   margin: 0 auto;
   text-align: center;
 }
+.card a.btn {
+  display: block;
+  margin: 0 auto;
+  width: fit-content;
+}
